--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       <button class="container-item button-0" value="0">0</button>
       <button class="container-item button-point" value=".">.</button>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
